--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </h3>
         </div>
         <div class="col-12 mt-5 d-flex justify-content-center">
-          <div class="box">
+          <div class="box" onclick="animateGift()">
             <div class="box-body">
               <img class="img" src="" />
               <div class="box-lid">
@@ -26,5 +26,7 @@
         </div>
       </div>
     </div>
+    <div id="background"></div>
   </body>
+  <script src="js.js"></script>
 </html>
