--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12" style="text-align: center">
           <h3 class="text-center text-light my-5">
-            <strong>Hover the box</strong>
+            <strong>Klikni a rozbaľ darček</strong>
           </h3>
         </div>
         <div class="col-12 mt-5 d-flex justify-content-center">
           <div class="box" onclick="animateGift()">
             <div class="box-body">
-              <img class="img" src="" />
+              <img class="img" src="react-core-concepts.png" />
               <div class="box-lid">
                 <div class="box-bowtie"></div>
               </div>
