--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <div class="col-12 mt-5 d-flex justify-content-center">
           <div class="box" onclick="animateGift()">
             <div class="box-body">
-              <img class="img" src="react-core-concepts.png" />
+              <div class="img">
+                <img src="stoEur.jpg" />
+                <img src="stoEur.jpg" />
+              </div>
               <div class="box-lid">
                 <div class="box-bowtie"></div>
               </div>
