--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-12" style="text-align: center">
+        <!-- <div class="col-12" style="text-align: center">
           <h3 class="text-center text-light my-5">
             <strong>Klikni a rozbaľ darček</strong>
           </h3>
-        </div>
-        <div class="col-12 mt-5 d-flex justify-content-center">
+        </div> -->
+        <div class="col-12 mt-5 d-flex justify-content-center darcek">
           <div class="box" onclick="animateGift()">
             <div class="box-body">
               <div class="img">
